--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/pages/login/login.tsx",
+    "src/pages/register/register.tsx"
+  ],
   "exclude": ["node_modules"]
 }
