--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "next-chat",
   "version": "0.1.0",
   "private": true,
-  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
@@ -31,5 +30,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
-  
 }
