--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@types/cors": "^2.8.17",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "jotai": "^2.11.0",
     "lucide-react": "^0.469.0",
@@ -29,7 +31,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
