--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-intersection-observer": "^9.14.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.2"
